[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/approve_checkmark_accessible.png" type="Texture" id=1]
[ext_resource path="res://assets/approve_checkmark.png" type="Texture" id=2]
[ext_resource path="res://assets/disapprove_circle.png" type="Texture" id=3]
[ext_resource path="res://assets/disapprove_circle_accessible.png" type="Texture" id=4]
[ext_resource path="res://scenes/AccessibleTextureButton.gd" type="Script" id=5]
[ext_resource path="res://scenes/ModerationControl.gd" type="Script" id=6]

[node name="ModerationControl" type="HSplitContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 16 )
custom_constants/separation = 0
collapsed = true
dragger_visibility = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApproveButton" type="TextureButton" parent="."]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
script = ExtResource( 5 )
StandardTexture = ExtResource( 2 )
AccessibleTexture = ExtResource( 1 )

[node name="RejectButton" type="TextureButton" parent="."]
margin_left = 24.0
margin_right = 40.0
margin_bottom = 16.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 5 )
StandardTexture = ExtResource( 3 )
AccessibleTexture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="ApproveButton" to="." method="_on_ApproveButton_pressed" flags=6]
[connection signal="pressed" from="RejectButton" to="." method="_on_RejectButton_pressed" flags=6]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=6]
